--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <header class="bg-primary text-white text-center py-5">
-    <img src="./portfolio/media/profile.jpeg" alt="Profile Image" class="rounded-circle shadow mb-3 profile-animate" style="width: 140px; height: 140px; object-fit: cover; border: 4px solid #fff;" >
+    <img src="./media/profile.jpeg" alt="Profile Image" class="rounded-circle shadow mb-3 profile-animate" style="width: 140px; height: 140px; object-fit: cover; border: 4px solid #fff;" >
     <h1>Javid Ibadov</h1>
     <p class="lead">Full Stack Developer (Mainly .NET) | Video Editor</p>
         <div class="d-flex justify-content-center gap-3">
@@ -140,13 +140,13 @@
                 <div class="col-lg-5">
                     <div class="row g-2">
                         <div class="col-12">
-                            <img src="./portfolio/media/homepage.png" alt="ElitNERJ Homepage Screenshot" class="img-fluid rounded shadow-sm mb-2">
+                            <img src="./media/homepage.png" alt="ElitNERJ Homepage Screenshot" class="img-fluid rounded shadow-sm mb-2">
                         </div>
                         <div class="col-6">
-                            <img src="./portfolio/media/adminpage.png" alt="ElitNERJ Admin Panel Screenshot" class="img-fluid rounded shadow-sm">
+                            <img src="./media/adminpage.png" alt="ElitNERJ Admin Panel Screenshot" class="img-fluid rounded shadow-sm">
                         </div>
                         <div class="col-6">
-                            <img src="./portfolio/media/loginpage.png" alt="ElitNERJ Mobile View Screenshot" class="img-fluid rounded shadow-sm">
+                            <img src="./media/loginpage.png" alt="ElitNERJ Mobile View Screenshot" class="img-fluid rounded shadow-sm">
                         </div>
                     </div>
                 </div>
