--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cavid Ibadov Portfolio</title>
+    <meta name="description" content="Cavid Ibadov - Full Stack Developer (.NET) and Video Editor in Baku. Clean Architecture, ASP.NET Core, EF Core, SQL Server, and React projects.">
+    <meta name="keywords" content="Cavid Ibadov, Ibadov Cavid, Full Stack Developer, .NET, ASP.NET Core, EF Core, SQL Server, React, Clean Architecture, Portfolio, Baku">
+    <meta name="author" content="Cavid Ibadov">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://cavidibadov.site/">
+    <meta property="og:title" content="Cavid Ibadov Portfolio">
+    <meta property="og:description" content="Full Stack Developer (.NET) and Video Editor. Clean Architecture, ASP.NET Core, EF Core, SQL Server, and React projects.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cavidibadov.site/">
+    <meta property="og:image" content="https://cavidibadov.site/media/profile.jpeg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Cavid Ibadov Portfolio">
+    <meta name="twitter:description" content="Full Stack Developer (.NET) and Video Editor. Clean Architecture, ASP.NET Core, EF Core, SQL Server, and React projects.">
+    <meta name="twitter:image" content="https://cavidibadov.site/media/profile.jpeg">
+    <meta name="theme-color" content="#007bff">
     <link rel="icon" type="image/png" href="./media/profile.jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
